Fixes: Graduate perceptions: formatting, size and layout issues. https://app.clickup.com/t/8692tqhzb

--- a/CMS/static/scss/partials/student_satisfaction.scss
+++ b/CMS/static/scss/partials/student_satisfaction.scss
@@ -356,10 +356,10 @@
         @include s-heading-mixin();
         margin-top: 0;
         padding-top: 15px;
-        font-size: 1.25rem;
         font-weight: 400;
-        color: #000000;
         margin-bottom: 0;
+        font-size: 1.50rem;
+        color: #666666;
 
         p {
           font-size: 1rem;
